--- a/.github/workflows/build-import-app.yml
+++ b/.github/workflows/build-import-app.yml
@@ -9,7 +9,7 @@ on:
       solution_name:
         description: 'name of the solution to worked on from Power Platform'
         required: true
-        default: ALMLab
+        default: 'BasicApp'
        #Do Not change these values
       solution_exported_folder:
         description: 'folder name for staging the exported solution *do not change*'
@@ -25,7 +25,7 @@ on:
        default: solutions/
 env:
 #edit your values here
-  ENVIRONMENT_URL: ${{secrets.ENVIRONMENTURL}}'
+  ENVIRONMENT_URL: ${{secrets.ENVIRONMENTURL}}
   CLIENT_ID: ${{secrets.CLIENT_ID}}
   TENANT_ID: ${{secrets.TENANT}}
 permissions:
