--- a/.github/workflows/build-push-prod.yml
+++ b/.github/workflows/build-push-prod.yml
@@ -11,7 +11,7 @@ on:
       solution_name:
         description: 'The solution name.'
         type: string
-        default: ALMLab       
+        default: BasicApp       
       solution_shipping_folder:
         description: 'folder name for staging the exported solution *do not change*'        
         type: string
@@ -29,20 +29,29 @@ on:
        type: string
        default: out/release
     secrets:
-      envSecret:
+      DEV_CLIENT_SECRET:
         description: 'The secret value for authentication using SPN'
         required: true
-      BUILD_ENVIRONMENT_URL:
+      DEV_ENVIRONMENT_URL:
         description: 'Build environment url.'
         required: true      
       PRODUCTION_ENVIRONMENT_URL: 
         description: 'Production environment url.'
         required: true
-      CLIENT_ID: 
+      DEV_CLIENT_ID: 
         description: 'The client id'
         required: true
-      TENANT_ID: 
+      DEV_TENANT_ID: 
         description: 'The tenant id'
+        required: true
+      PROD_CLIENT_ID: 
+        description: 'The client id'
+        required: true
+      PROD_TENANT_ID: 
+        description: 'The tenant id'
+        required: true
+      PROD_CLIENT_SECRET:
+        description: 'The secret value for authentication using SPN'
         required: true
 
 jobs:
@@ -64,13 +73,13 @@ jobs:
         solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
         solution-type: Unmanaged
 
-    - name: Import solution as unmanaged to build env
+    - name: Import solution as unmanaged to dev env
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
-        environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{secrets.TENANT_ID}}
+        environment-url: ${{secrets.DEV_ENVIRONMENT_URL}}
+        app-id: ${{secrets.DEV_CLIENT_ID}}
+        client-secret: ${{ secrets.DEV_CLIENT_SECRET }}
+        tenant-id: ${{secrets.DEV_TENANT_ID}}
         solution-file: ${{ inputs.solution_outbound_folder}}/${{ inputs.solution_name }}.zip
         force-overwrite: true
         publish-changes: true
@@ -78,10 +87,10 @@ jobs:
     - name: Export solution as managed
       uses: microsoft/powerplatform-actions/export-solution@v0
       with:
-        environment-url: ${{secrets.BUILD_ENVIRONMENT_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }} 
-        tenant-id: ${{secrets.TENANT_ID}}
+        environment-url: ${{secrets.DEV_ENVIRONMENT_URL}}
+        app-id: ${{secrets.DEV_CLIENT_ID}}
+        client-secret: ${{ secrets.DEV_CLIENT_SECRET }} 
+        tenant-id: ${{secrets.DEV_TENANT_ID}}
         solution-name: ${{ inputs.solution_name }}
         managed: true
         solution-output-file: ${{ inputs.solution_shipping_folder}}/${{ inputs.solution_name }}_managed.zip
@@ -112,9 +121,9 @@ jobs:
       uses: microsoft/powerplatform-actions/import-solution@v0
       with:
         environment-url: ${{secrets.PRODUCTION_ENVIRONMENT_URL}}
-        app-id: ${{secrets.CLIENT_ID}}
-        client-secret: ${{ secrets.envSecret }}
-        tenant-id: ${{secrets.TENANT_ID}}
+        app-id: ${{secrets.PROD_CLIENT_ID}}
+        client-secret: ${{ secrets.PROD_CLIENT_SECRET }}
+        tenant-id: ${{secrets.PROD_CLIENT_TENANT_ID}}
         solution-file: ${{ inputs.solution_release_folder}}/${{ inputs.solution_name }}_managed.zip
         force-overwrite: true
         publish-changes: true
