--- a/.github/workflows/release-call.yml
+++ b/.github/workflows/release-call.yml
@@ -17,8 +17,8 @@ jobs:
       DEV_ENVIRONMENT_URL: ${{secrets.ENVIRONMENTURL}}
       DEV_CLIENT_ID: ${{secrets.CLIENT_ID}}
       DEV_TENANT_ID: ${{secrets.TENANT}} 
-      
+
       PROD_CLIENT_SECRET: ${{ secrets.PROD_SECRET }}
-      PROD_ENVIRONMENT_URL: ${{secrets.PROD_ENVIRONMENTURL}}
+      PROD_ENVIRONMENT_URL: ${{secrets.PROD_ENVIRONMENT_URL}}
       PROD_CLIENT_ID: ${{secrets.PROD_CLIENT_ID}}
       PROD_TENANT_ID: ${{secrets.PROD_TENANT}}  
