--- a/.github/workflows/export-powerapp-ru.yml
+++ b/.github/workflows/export-powerapp-ru.yml
@@ -13,22 +13,22 @@ on:
         description: 'The solution name.'
         type: string
         default: BasicApp       
-      solution_shipping_folder:
-        description: 'folder name for staging the exported solution *do not change*'        
+        #Do Not change these values
+      solution_exported_folder:
+        description: 'folder name for staging the exported solution *do not change*'
         type: string
-        default: out/ship/
-      solution_outbound_folder:
+        required: true
+        default: out/exported/
+      solution_folder:
         description: 'staging the unpacked solution folder before check-in *do not change*'
+        required: true
         type: string
         default: out/solutions/
-      solution_source_folder: 
-       description: 'folder name to be created and checked in *do not change*'
-       type: string
-       default: solutions/
-      solution_release_folder:
-       description: 'folder where the released binaries are going to be hosted *do not change*'
-       type: string
-       default: out/release
+      solution_target_folder: 
+        description: 'folder name to be created and checked in *do not change*'
+        required: true
+        type: string
+        default: solutions/
     secrets:
       CLIENT_SECRET:
         description: 'The secret value for authentication using SPN'
