--- a/.github/workflows/release-prod.yml
+++ b/.github/workflows/release-prod.yml
@@ -12,13 +12,10 @@ jobs:
     uses: ./.github/workflows/release-prod-powerapp-ru.yml
     with:
       solution_name: BasicApp
+      prod_env: prod
+      build_env: dev
     secrets:
-      BUILD_CLIENT_SECRET: ${{ secrets.PowerPlatformSPN }}
-      BUILD_ENVIRONMENT_URL: ${{secrets.ENVIRONMENTURL}}
-      BUILD_CLIENT_ID: ${{secrets.CLIENT_ID}}
-      BUILD_TENANT_ID: ${{secrets.TENANT}} 
-
-      PROD_CLIENT_SECRET: ${{ secrets.PROD_SECRET }}
-      PROD_ENVIRONMENT_URL: ${{secrets.PROD_ENVIRONMENT_URL}}
-      PROD_CLIENT_ID: ${{secrets.PROD_CLIENT_ID}}
-      PROD_TENANT_ID: ${{secrets.PROD_TENANT}}  
+      CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+      ENVIRONMENT_URL: ${{secrets.ENVIRONMENT_URL}}
+      CLIENT_ID: ${{secrets.CLIENT_ID}}
+      TENANT_ID: ${{secrets.TENANT_ID}}
